[package]
name = "bevy-rapier-sim-time"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.0"
bevy_rapier3d = { version = "0.23.0", features = ["simd-stable", "debug-render-3d"] }
